--- a/C#/RegistrationLambda/RegistrationLambda.csproj
+++ b/C#/RegistrationLambda/RegistrationLambda.csproj
@@ -17,4 +17,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="template.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
