--- a/C#/RegistrationLambda/RegistrationLambda.csproj
+++ b/C#/RegistrationLambda/RegistrationLambda.csproj
@@ -18,7 +18,10 @@
     <ProjectReference Include="..\Entities\Entities.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="template.json">
+    <None Update="template_ge.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="template_us.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
